Fix newsletter form styling issue in dark mode

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -47,3 +47,11 @@ div.alert {
     column-count: 3;
   }
 }
+
+// Newsletter
+.newsletter {
+  text-align: center;
+  padding: 2em;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 6px;
+}
